# infinite_state_machine

./: CMakeLists.txt  InfiniteStateMachine.xml  README.md
inc/: infinite_state.h  infinite_state_machine.h  infinite_state_machine.hpp
src/: infinite_state.c  infinite_state_machine.c  infinite_state_machine.cpp
test/: abc.cpp  def.c  engine.c
